added basic style guide structure

--- a/style_guide.html
+++ b/style_guide.html
@@ -83,7 +83,76 @@
 
     <!-- TEXT ELEMENTS SECTION // -->
     <section id="text_elements">
+      <section>
+        <h2>Company updates/events</h2>
+      </section>
 
+      <section>
+        <h2>about the company</h2>
+      <section>
+        <h2>how to contact the business</h2>
+        <ul>
+         <li>Email:
+        </li>
+        <li>Phone:
+        </li>
+        <li>Facebook
+        </li>
+        <li>WeChat
+        </li>
+        <li>Twitter
+        </li>
+      </section>
+
+      </ul>
+      <section>
+        <h2>a multi-product listing</h2>
+      
+        <h3></h3>
+        <ul>
+          <li>
+          </li>
+          <li>
+          </li>
+          <li>
+          </li>
+          <li>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Product detailed view</h2>
+      
+        <p></p>
+        <img></img>
+      </section>
+
+      <section>
+        <h2>the entire process of purchasing a product</h2>
+        <p>
+        </p>
+        <ol>
+          <li>
+          </li>
+          <li>
+          </li>
+          <li>
+          </li>
+          <li>
+          </li>
+        </ol>
+      </section>
+
+      <section>
+        <h2>aprropriate means for the user to provide feedback on a product</h2>
+        <p>
+        </p>
+        <div>
+        </div>
+      </section>
+      <h2>Style Guide</h2>
+      </section>
       <section>
         <h2>Headings</h2>
       </section>
