--- a/Citations.html
+++ b/Citations.html
@@ -70,7 +70,7 @@
 
       <ul class="citations">
         <li>
-          <cite>Creator</cite>. (Role). (Year). <strong>Title</strong> [Media]. Retrieved from <a href="http://retrosuperfuture.com/">[URL]</a>.
+          <cite>Creator</cite>. (Role). (Year). <strong>Title</strong> [Media]. Retrieved from <a href="http://retrosuperfuture.com/">[URL]</a>
         </li>
       </ul>
 
