--- a/style_guide.html
+++ b/style_guide.html
@@ -75,11 +75,11 @@
 
         <h3>Sample code:</h3>
         <code>&lt;a href="#" class="links"&gt; LOGIN&lt;/a&gt;</code>
-        <code>&lt;a href="#" class="links"&gt; CART (0)&lt;/a&gt;</code>
+        <code>&lt;a href="#" class="links"&gt; BAG (0)&lt;/a&gt;</code>
 
         <h3>Rendered element:</h3>
         <a class="links" href="#"> LOGIN</a>
-        <a class="links" href="#"> CART (0)</a>
+        <a class="links" href="#"> BAG (0)</a>
 
       </section>
 
