--- a/style_guide.html
+++ b/style_guide.html
@@ -57,7 +57,7 @@
         <h2>Navigation Button</h2>
 
         <h3>CSS selector:</h3>
-        <p>.button-nav</p>
+        <p>.button-nav .button</p>
 
         <h3>Sample code:</h3>
         <code>&lt;a href="#" class="button"&gt;ADD TO CART&lt;/a&gt;</code>
@@ -65,6 +65,8 @@
         <h3>Rendered element:</h3>
         </br>
         <a class="button-nav" href="#">ADD TO CART</a>
+        <a class="button" href="#"> LOGIN</a>
+        <a class="button" href="#"> BAG (0)</a>
 
       </section>
 
@@ -72,15 +74,17 @@
         <h2>In-text link</h2>
 
         <h3>CSS selector:</h3>
-        <p>.links</p>
+        <p>.link</p>
+         <h3>Sample code:</h3>
+         <code>&lt;p &gt;  &lt;b&gt;  &lt;a class="link" href="default.asp" target="_blank"&gt;personal protfolio  &lt;/a&gt;  &lt;/b&gt; &lt;/p &gt;</code>
 
-        <h3>Sample code:</h3>
-        <code>&lt;a href="#" class="links"&gt; LOGIN&lt;/a&gt;</code>
-        <code>&lt;a href="#" class="links"&gt; BAG (0)&lt;/a&gt;</code>
+          <h3>Rendered element:</h3>
+          </br>
+          <p><b><a class="link" href="style_guide.html" target="_blank" >STYLE GUIDE</a></b></p>
+      </section>
 
-        <h3>Rendered element:</h3>
-        <a class="links" href="#"> LOGIN</a>
-        <a class="links" href="#"> BAG (0)</a>
+
+     
 
       </section>
 
@@ -103,7 +107,7 @@
       </section>
 
       <section>
-        <h2>Submit/Reset Buttons</h2>
+        <h2>Submit Buttons</h2>
         <h3>CSS selector:</h3>
           <p>.confirm-button</p>
 
@@ -189,19 +193,17 @@
           <p>.bulleted-lists</p>
 
           <h3>Sample code:</h3>
-          <code>&lt;ul&gt;</code>
-          <code>&lt;li&gt;</code>
-          <code>&lt;a href="#" class="bulleted-lists"&gt;SUPER &lt;/a&gt;</code>
-          <code>&lt;/li&gt;</code>
+          <code>&lt;ul class="bulleted-lists"&gt;</code>
+          <code>&lt;li&gt; SUPER &lt;/li&gt;</code>
           <code>&lt;/ul&gt;</code>
 
           <h3>Rendered element:</h3>
-          <ul>
-          <li><a class="bulleted-lists" href="#">RAY BAN</a></li>
-          <li><a class="bulleted-lists" href="#">PRADA</a></li>
-          <li><a class="bulleted-lists" href="#">PERSOL</a></li>
-          <li><a class="bulleted-lists" href="#">RETROSUPERFUTURE</a></li>
-          <li><a class="bulleted-lists" href="#">GENTLE MONSTERS</a></li>
+          <ul class="bulleted-lists">
+          <li>RAY BAN</li>
+          <li>PRADA</li>
+          <li>PERSOL</li>
+          <li>RETROSUPERFUTURE</li>
+          <li>GENTLE MONSTERS</li>
           </ul>
       </section>
 
@@ -212,15 +214,13 @@
 
           <h3>Sample code:</h3>
           <code>&lt;ol&gt;</code>
-          <code>&lt;li&gt;</code>
-          <code>&lt;a href="#" class="numbered-lists"&gt;CLASSIC &lt;/a&gt;</code>
-          <code>&lt;/li&gt;</code>
+          <code>&lt;li class="numbered-lists"&gt; CLASSIC &lt;/li&gt;</code>
           <code>&lt;/ol&gt;</code>
 
           <h3>Rendered element:</h3>
           <ol>
-          <li><a class="numbered-lists" href="#">LOCATION</a></li>
-          <li><a class="numbered-lists" href="#">STAFF</a></li>
+          <li class="numbered-lists">LOCATION</li>
+          <li class="numbered-lists">STAFF</li>
           </ol>
       </section>
 
@@ -264,53 +264,37 @@
           <code>&lt;/ul&gt;</code>
 
           <h3>Rendered element:</h3>
-          <ul>
-          <li><a class="numbered-lists" href="#">NEW IN </a></li>
-          <li><a class="numbered-lists" href="#">SUNGLASSES</a></li>
-            <ol>
-              <li>
-                <a class="numbered-lists" href="#">ALL PRODUCTS </a>
-              </li>
-            <li>
-              <a class="numbered-lists" href="#">EXCLUSIVE </a>
-            </li>
-            <li>
-              <a class="numbered-lists" href="#">COLLABORATION</a>
-            </li>
+          <ol class="numbered-lists" href="#">
+            <li><a >NEW IN </a></li>
+            <li>SUNGLASSES</li>
+              <ol class="numbered-lists" href="#">
+                <li>ALL PRODUCTS</li>
+                <li>EXCLUSIVE</li>
+                <li>COLLABORATION</li>
+              </ol>
+            <li>OPTICALS
+              <ol class="numbered-lists" href="#">
+                <li>
+                  ALL PRODUCTS 
+                </li>
+              </ol>
+            <li>BRANDS</li>
+              <ol class="numbered-lists" href="#">
+                <li>SUPER</li>
+                <li>RETROSUPERFUTURE</li>
+                <li>SPECIALS</li>
+                <li>GENTLE MONSTERS</li>
+              </ol>
+            <li>ACCESSORIES</li>
+              <ol class="numbered-lists" href="#">
+                <li>BAGS</li>
+              </ol>
+            <li>GIFT CARD</li>
+            <li>ORDER</li>
+            <li>CUSTOMERCARE</li>
+            <li>LOGIN</li>
+            <li>CART(0)</li>
           </ol>
-          <li><a class="numbered-lists" href="#">OPTICALS</a>
-            <ol>
-            <li>
-              <a class="numbered-lists" href="#">ALL PRODUCTS </a>
-            </li>
-          </ol>
-          <li><a class="numbered-lists" href="#">BRANDS</a></li>
-            <ol>
-            <li>
-              <a class="numbered-lists" href="#">SUPER</a>
-            </li>
-            <li>
-              <a class="numbered-lists" href="#"> RETROSUPERFUTURE </a>
-            </li>
-            <li>
-               <a class="numbered-lists" href="#"> SPECIALS </a>
-            </li>
-            <li>
-              <a class="numbered-lists" href="#"> GENTLE MONSTERS </a>
-            </li>
-          </ol>
-          <li><a class="numbered-lists" href="#">ACCESSORIES</a></li>
-              <ol>
-              <li>
-                <a class="numbered-lists" href="#">BAGS </a>
-              </li>
-          </ol>
-          <li><a class="numbered-lists" href="#">GIFT CARD</a></li>
-          <li><a class="numbered-lists" href="#">ORDER</a></li>
-          <li><a class="numbered-lists" href="#">CUSTOMERCARE</a></li>
-          <li><a class="numbered-lists" href="#">LOGIN</a></li>
-          <li><a class="numbered-lists" href="#">CART(0)</a></li>
-          </ul>
 
 
       </section>
