--- a/style_guide.html
+++ b/style_guide.html
@@ -327,6 +327,21 @@
 
       </section>
 
+       <section>
+
+        <h2>Grid</h2>
+
+        <h3>CSS selector:</h3>
+        <p>.img</p>
+
+        <h3>Sample code:</h3>
+        <code>&lt;img src="img/grid.png" height="400" width="500" alt="bg"&gt;</code>
+
+        <h3>Rendered element:</h3>
+        <img src="img/grid.png" height="400" width="500" alt="grid">
+        
+      </section>
+
       <section>
 
         <h2>IMAGE EXAMPLE</h2>
