--- a/User-flows.html
+++ b/User-flows.html
@@ -48,15 +48,14 @@
 
     <section id="desktopdisplay">
 
-      <h2>4k desktop display</h2>
 
-        <img src="img/1.JPG" height="400" width="600" alt="desktopdisplay">
+        <img src="img/user_flow_company.png" alt="desktopdisplay">
 
     </section>
 
 
 
-    <section id="smartphone">
+   <!-- <section id="smartphone">
 
       <h2>Smartphone</h2>
 
@@ -74,7 +73,7 @@
        <img src="img/8.JPG" height="400" width="600" alt="smartwatch">
         <img src="img/9.JPG" height="400" width="600" alt="smartwatch1">
 
-    </section>
+    </section> -->
 
 
 </div>
