--- a/style_guide.html
+++ b/style_guide.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>P02 - STYLE GUIDE</title>
+    <title>LD2S</title>
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -12,7 +12,7 @@
 
   <body>
 
-    <h1>P02 - STYLE GUIDE </h1>
+    <h1>LD2S</h1>
 
   <div class="grid">
     <nav class="grid-col-3of10">
