--- a/Citations.html
+++ b/Citations.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>P02 - CITATIONS</title>
+    <title>LD2S - CITATIONS</title>
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -12,7 +12,7 @@
 
   <body>
 
-    <h1>P02 - CITATIONS</h1>
+    <h1>LD2S - CITATIONS</h1>
 
  <div class="grid">
     <nav class="grid-col-3of10">
@@ -51,7 +51,7 @@
       <ul class="citations">
         
         <li>
-          <cite>Creator</cite>. (Role). (Year). <strong>Roboto</strong> [Font]. Retrieved from <a href="https://www.google.com/fonts/specimen/Roboto">[URL]</a>
+          <cite>Christian Robertson</cite>. 2011. <strong>Roboto</strong> [Font]. Retrieved from <a href="https://www.google.com/fonts/specimen/Roboto">[URL]</a>
         </li>
 
         <li>
