--- a/User-flows.html
+++ b/User-flows.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>P02 - User-flows</title>
+    <title>LD2S - User-flows</title>
 
     <link href="css/main.css" rel="stylesheet">
 
@@ -12,7 +12,7 @@
 
   <body>
 
-    <h1>P02 - USER-FLOWS</h1>
+    <h1>LD2S - USER-FLOWS</h1>
 
  <div class="grid">
     <nav class="grid-col-3of10">
