--- a/style_guide.html
+++ b/style_guide.html
@@ -64,7 +64,7 @@
         <code>&lt;img src="img/brandname.jpg" height="600" width="800" alt="bg"&gt;</code>
 
         <h3>Rendered element:</h3>
-        <img src="img/brandname.jpg" height="600" width="800" alt="brandname">
+        <img src="img/logo.jpg" height="200" width="200" alt="brandname">
       </section>
 
     </section>
