edited menu bars

--- a/User-flows.html
+++ b/User-flows.html
@@ -22,13 +22,7 @@
       </p>
       <ul>
         <li>
-          <a href="#desktopdisplay"> 4k desktop display</a>
-        </li>
-        <li>
-          <a href="#smartphone">smartphone</a>
-        </li>
-        <li>
-          <a href="#smartwatch">smartwatch</a>
+          <a href="#userflow"> User-flows</a>
         </li>
 
       </ul>
@@ -46,34 +40,13 @@
    <div class="grid-col-7of10">
 
 
-    <section id="desktopdisplay">
+    <section id="userflow">
 
 
-        <img src="img/user_flow_company.png" alt="desktopdisplay">
-
-    </section>
-
-
-
-   <!-- <section id="smartphone">
-
-      <h2>Smartphone</h2>
-
-        <img src="img/6.JPG" height="400" width="600" alt="smartphone">
-         <img src="img/7.JPG" height="400" width="600" alt="smartphone1">
+        <img src="img/user_flow_company.png" alt="userflow1">
 
     </section>
 
-
-
-    <section id="smartwatch">
-
-      <h2>Smartwatch</h2>
-
-       <img src="img/8.JPG" height="400" width="600" alt="smartwatch">
-        <img src="img/9.JPG" height="400" width="600" alt="smartwatch1">
-
-    </section> -->
 
 
 </div>
