--- a/style_guide.html
+++ b/style_guide.html
@@ -64,6 +64,8 @@
         <code>&lt;img src="img/brandname.jpg" height="600" width="800" alt="bg"&gt;</code>
 
         <h3>Rendered element:</h3>
+        <p class="brandnames">at</p>
+
         <img src="img/logo.jpg" height="200" width="200" alt="brandname">
       </section>
 
