add product list

--- a/style_guide.html
+++ b/style_guide.html
@@ -264,6 +264,32 @@
         <h2>Product Listing</h2>
 
         <h3>CSS selector:</h3>
+        <p>.products</p>
+
+        <h3>Sample code:</h3>
+        <code>&lt;p&gt;&lt;strong&gt; MENU: &lt;/strong&gt; &lt;/p&gt;</code>
+        <code>&lt;a href="#" class="selected" &gt;NEW IN&lt;/a&gt;</code>
+       
+
+        <h3>Rendered element:</h3>
+
+      <div class="product-list">
+         <img src="img/product.jpg" height="100" width="300" alt="product">
+        <P class="productname"> Retrosuperfuture</P>
+        <P class="productseries"> AX4015</P>
+        <P class="productprice"> $100</P>
+        <a href="#"><P class="addtobag"> Add to bag</P></a>
+      </div>
+
+       
+      </section>
+
+
+
+      <section>
+        <h2>Product Listing2</h2>
+
+        <h3>CSS selector:</h3>
           <p>.product-listing</p>
 
           <h3>Sample code:</h3>
