--- a/style_guide.html
+++ b/style_guide.html
@@ -299,6 +299,8 @@
           <code>&lt;/li&gt;</code>
           <code>&lt;/ul&gt;</code>
 
+
+
           <h3>Rendered element:</h3>
           <ul class="numbered-lists" >
             <li>BRAND
@@ -367,6 +369,9 @@
 
         <h3>Rendered element:</h3>
         <img src="img/grid.png" height="400" width="500" alt="grid">
+        <div class:"nb">Navigation</div>
+        <div class:"bb">Branding</div>
+        <div class:"pb">product</div>
         
       </section>
 
